fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC3031UrlCheck2Rule.dsl
test 1 urlCheckEvent2:
    2019/02/22 01:12:34:
        urlCheck2Event:
            media: "YSS"
            accountId: 303101
            campaignId: 303222
            campaignName: "campaginName303102"
            adGroupId: 303222
            adGroupName: "adgroupName303102"
            adId: 303222
            adName: "ad3031032"
            trackingUrlTemplate: "123 "
            finalUrls: " 23423"
            finalMobileUrls: " aa bbb"
            finalAppUrls: "dasd"